Remove some animations and fix footer overlapping

--- a/assets/scss/_tweaks.scss
+++ b/assets/scss/_tweaks.scss
@@ -14,12 +14,12 @@ body {
 }
 
 footer {
-  position: absolute;
-  right: 0;
-  left: 0;
-  @include media-breakpoint-up(lg) {
-    left: $sidebar-base-width;
-  }
+  // position: absolute;
+  // right: 0;
+  // left: 0;
+  // @include media-breakpoint-up(lg) {
+  //   left: $sidebar-base-width;
+  // }
   div {
     max-width: 75rem;
   }
